# vk

./: .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  coverage.yml  dependabot-automerge.yml  release.yml
docs/: GITHUB_TOKEN.md  contents.md  developers-guide.md  documentation-style-guide.md  github-token.md  ortho-config-users-guide.md  ortho-config-v0-6-0-migration-guide.md  ortho-config-v0-7-0-migration-guide.md  repository-layout.md  users-guide.md  vk-design.md  vk-end-to-end-testing-guide.md
docs/execplans/: adopt-ortho-config-v0-8-0.md
src/: api.rs  auth.rs  banners.rs  bool_predicates.rs  bool_predicates_lib.rs  boxed.rs  branch_pr.rs  cli_args.rs  commands.rs  config.rs  config_loader.rs  diff.rs  environment.rs  graphql_queries.rs  html.rs  icons.rs  issues.rs  lib.rs  main.rs  main_tests.rs  models.rs  printer.rs  ref_parser.rs  ref_utils.rs  references.rs  resolve.rs  review_threads.rs  reviews.rs  summary.rs  test_utils.rs  test_utils_env.rs
src/api/: mod.rs  pagination.rs  retry.rs  tests.rs
src/api/client/: helpers.rs  http.rs  mod.rs  pagination.rs  tests.rs  transcript.rs  types.rs
src/api/pagination/: tests.rs
src/branch_pr/: mod.rs  tests.rs
src/commands/: tests.rs
src/printer/: mod.rs  tests.rs
src/ref_parser/: git.rs  mod.rs  parse.rs  tests.rs
src/resolve/: graphql.rs  mod.rs  rest.rs
src/review_threads/: tests.rs
src/test_utils/: git_fixture.rs  mod.rs  sandbox.rs  test_http.rs
tests/: api_client.rs  auth.rs  cli.rs  cli_args.rs  cli_args_merge.rs  cli_serialization.rs  config_errors.rs  e2e.rs  e2e_missing_nodes.rs  html.rs  outdated.rs  printing.rs  reference.rs  resolve.rs  subcommand_merge.rs  utils.rs
tests/ca/: cert.pem  key.pem
tests/e2e/: common.rs  main.rs  pr_auto_detect.rs  pr_basic.rs
tests/fixtures/: comment_coderabbit.txt  pr42.json  review_comment.json  review_threads_coderabbit.json  review_threads_multiple_files.json  review_threads_outdated.json  review_threads_outdated_multiple_files.json  reviews_empty.json  reviews_null_date.json
tests/snapshots/: cli__pr_renders_coderabbit_comment.snap  cli__pr_summarises_multiple_files.snap  cli__pr_summarises_multiple_files_summary.snap
tests/support/: env.rs  merge.rs  merge_cases.rs  subcommand.rs
tests/support/merge_cases/: data.rs  expectations.rs  mod.rs
tests/utils/: mod.rs
