[package]
name = "vk"
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.17"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
termimad = "0.33.0"
thiserror = "1.0.57"
log = "0.4"
rand = "^0.8.5"
env_logger = "0.11"
url = "2.5.0"
regex = "1.10.3"
diffy = "0.4.2"
chrono = { version = ">=0.4.20, <0.5", features = ["serde", "clock"] }
anyhow = "1.0"
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0+unofficial"
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.2.0", default-features = false }
figment = { version = "0.10", default-features = false, features = ["env", "toml"], optional = true }
xdg = { version = "3", optional = true }
uncased = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
figment-json5 = { version = "0.1.1", optional = true }
serde_yaml = { package = "serde_yaml_ok", version = "0.9.36", optional = true }

[features]
default = ["toml"]
toml = ["dep:figment", "dep:xdg", "dep:uncased", "dep:toml", "ortho_config/toml"]
json5 = ["toml", "dep:figment-json5", "ortho_config/json5"]
yaml = ["toml", "dep:serde_yaml", "ortho_config/yaml"]

[dev-dependencies]
tempfile = "3.20.0"
serial_test = "3.2.0"
rstest = "0.25.0"
assert_cmd = "2.0"
third-wheel = "0.6"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
predicates = "3.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.16", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
# Unfortunately, due to an 'unused-braces' false postive with
# single line rstest fixtures, and the fact that fixtures do
# not permit 'expect' attributes, we must disable this deny.
# allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"

# 2. debugging leftovers
# Disabled pending further investigation into applicability.
# dbg_macro       = "deny"
# print_stdout    = "deny"
# print_stderr    = "deny"

# 3. panic-prone operations
unwrap_used                     = "deny"
# Expect used in tests. Discoraged in implementation code.
# expect_used                     = "deny"
indexing_slicing                = "deny"
string_slice                    = "deny"
integer_division                = "deny"
integer_division_remainder_used = "deny"

# 4. portability
host_endian_bytes   = "deny"
little_endian_bytes = "deny"
big_endian_bytes    = "deny"

# 5. nursery idiom polish
or_fun_call            = "deny"
option_if_let_else     = "deny"
use_self               = "deny"
string_lit_as_bytes    = "deny"

# 6. numerical foot-guns
float_arithmetic = "deny"
